--- a/test-output/old/Default suite/classes.html
+++ b/test-output/old/Default suite/classes.html
@@ -4,14 +4,18 @@
 <th>Method name</th>
 <th>Groups</th>
 </tr><tr>
-<td>com.web.tests.wmtestcases.unfi.SamplePOTest</td>
+<td>com.web.tests.unfi.LogsDemo</td>
 <td>&nbsp;</td><td>&nbsp;</td></tr>
 <tr>
 <td align='center' colspan='3'>@Test</td>
 </tr>
 <tr>
 <td>&nbsp;</td>
-<td>loginApplication</td>
+<td>TestGoogle</td>
+<td>&nbsp;</td></tr>
+<tr>
+<td>&nbsp;</td>
+<td>SearchItemInLog</td>
 <td>&nbsp;</td></tr>
 <tr>
 <td align='center' colspan='3'>@BeforeClass</td>
