--- a/test-output/old/Default suite/methods-alphabetical.html
+++ b/test-output/old/Default suite/methods-alphabetical.html
@@ -1,8 +1,16 @@
 <h2>Methods run, sorted chronologically</h2><h3>&gt;&gt; means before, &lt;&lt; means after</h3><p/><br/><em>Default suite</em><p/><small><i>(Hover the method name to see the test class name)</i></small><p/>
 <table border="1">
 <tr><th>Time</th><th>Delta (ms)</th><th>Suite<br>configuration</th><th>Test<br>configuration</th><th>Class<br>configuration</th><th>Groups<br>configuration</th><th>Method<br>configuration</th><th>Test<br>method</th><th>Thread</th><th>Instances</th></tr>
-<tr bgcolor="686d7f">  <td>18/09/12 23:56:58</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;SamplePOTest.init()[pri:0, instance:com.web.tests.wmtestcases.unfi.SamplePOTest@384ad17b]">&gt;&gt;init</td> 
-<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@1549725679</td>   <td></td> </tr>
-<tr bgcolor="686d7f">  <td>18/09/12 23:56:58</td>   <td>219</td> <td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;SamplePOTest.tearDown()[pri:0, instance:com.web.tests.wmtestcases.unfi.SamplePOTest@384ad17b]">&lt;&lt;tearDown</td> 
-<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@1549725679</td>   <td></td> </tr>
+<tr bgcolor="ec8072">  <td>18/09/28 16:43:24</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="LogsDemo.SearchItemInLog()[pri:2, instance:com.web.tests.unfi.LogsDemo@5b239d7d]">SearchItemInLog</td> 
+  <td>main@1961945640</td>   <td></td> </tr>
+<tr bgcolor="ec8072">  <td>18/09/28 16:43:24</td>   <td>-10</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="LogsDemo.TestGoogle()[pri:1, instance:com.web.tests.unfi.LogsDemo@5b239d7d]">TestGoogle</td> 
+  <td>main@1961945640</td>   <td></td> </tr>
+<tr bgcolor="ec8072">  <td>18/09/28 16:43:18</td>   <td>-5486</td> <td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;LogsDemo.init()[pri:0, instance:com.web.tests.unfi.LogsDemo@5b239d7d]">&gt;&gt;init</td> 
+<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@1961945640</td>   <td></td> </tr>
+<tr bgcolor="80b678">  <td>18/09/28 16:43:24</td>   <td>-2</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;DriverManager.takeScreenShot(org.testng.ITestResult)[pri:0, instance:com.web.tests.unfi.LogsDemo@5b239d7d]">&lt;&lt;takeScreenShot</td> 
+<td>&nbsp;</td>  <td>main@1961945640</td>   <td></td> </tr>
+<tr bgcolor="80b678">  <td>18/09/28 16:43:24</td>   <td>10</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;DriverManager.takeScreenShot(org.testng.ITestResult)[pri:0, instance:com.web.tests.unfi.LogsDemo@5b239d7d]">&lt;&lt;takeScreenShot</td> 
+<td>&nbsp;</td>  <td>main@1961945640</td>   <td></td> </tr>
+<tr bgcolor="ec8072">  <td>18/09/28 16:43:24</td>   <td>10</td> <td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;LogsDemo.tearDown()[pri:0, instance:com.web.tests.unfi.LogsDemo@5b239d7d]">&lt;&lt;tearDown</td> 
+<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@1961945640</td>   <td></td> </tr>
 </table>
